(analysis, ui) Adding WidgetSelectFileCombo, to find automatically files with the needed extensions, test it pn AlgorithmicPCP Wizard. some code cleaning for caseoptimal.